--- a/index.html
+++ b/index.html
@@ -9,11 +9,42 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="script/script.js"></script>
 
     
 </head>
 <body>
-    <div></div>
+    <header class="p-3 row" style="height: 80px">
+        <div class="col-6 text-right">
+            <img src="/images/Logo-bezier-curve.svg" alt="Logo Image" style="width: 70px"></img>
+        </div>
+        <div class="col-6 row">
+            <div class="col-4">
+                About
+            </div>
+            <div class="col-4">
+                Blog
+            </div>
+            <div class="col-4">
+                Contact
+            </div>
+        </div>
+    </header>
+    <main class="p-3">
+        <div id="titleLarge">
+            <div>Technical</div>
+            <div style="margin-top: -30px">Document</div>
+        </div>
+        Main
+    </main>
+    <footer>
+        Footer
+    </footer>
 </body>
 </html>
