--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/naomijustin/technical-document-fcc/main/images/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
 <body>
     <header class="p-3 row" style="height: 80px">
         <div class="col-6 text-right">
-            <img src="/images/Logo-bezier-curve.svg" alt="Logo Image" style="width: 70px"></img>
+            <img src="https://raw.githubusercontent.com/naomijustin/technical-document-fcc/main/images/Logo-bezier-curve.svg" alt="Logo Image" style="width: 70px"></img>
         </div>
         <div class="col-6 row">
             <div class="col-4">
