Set up layout for responsiveness desktop

--- a/index.html
+++ b/index.html
@@ -19,30 +19,35 @@
 
     
 </head>
-<body>
-    <header class="p-3 row" style="height: 80px">
-        <div class="col-6 text-right">
-            <img src="https://raw.githubusercontent.com/naomijustin/technical-document-fcc/main/images/Logo-bezier-curve.svg" alt="Logo Image" style="width: 70px"></img>
-        </div>
-        <div class="col-6 row">
-            <div class="col-4">
-                About
+<body class="mx-auto p-3">
+    <div id="wrapPageContent" class="container-fluid">
+        <header style="height: 80px">
+            <div class="row">
+                <div class="col-6 text-right">
+                    <img src="https://raw.githubusercontent.com/naomijustin/technical-document-fcc/main/images/Logo-bezier-curve.svg" alt="Logo Image" style="width: 70px"></img>
+                </div>
+                <div class="col-6 row">
+                    <div class="col-4">
+                        About
+                    </div>
+                    <div class="col-4">
+                        Blog
+                    </div>
+                    <div class="col-4">
+                        Contact
+                    </div>
+                </div>
             </div>
-            <div class="col-4">
-                Blog
+        </header>
+        <main>
+            <div id="titleLarge">
+                <div>Technical</div>
+                <div style="margin-top: -30px">Document</div>
             </div>
-            <div class="col-4">
-                Contact
-            </div>
-        </div>
-    </header>
-    <main class="p-3">
-        <div id="titleLarge">
-            <div>Technical</div>
-            <div style="margin-top: -30px">Document</div>
-        </div>
-        Main
-    </main>
+            Main
+        </main>
+    </div>
+    
     <footer>
         Footer
     </footer>
