--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 
@@ -49,24 +49,21 @@
             
             <!-- === begin: Scrollspy Nav === -->
             <div id="wrapScrollSpy" class="position-relative">                
-                <div class="sticky-top offset-9 col-3" style="position: -webkit-sticky"> 
-                    <nav id="sideNavScrollSpy" class="navbar navbar-light bg-light flex-column align-items-stretch p-3">                                              
-                        <nav class="nav nav-pills flex-column">
+                <div class="sticky-top offset-9 col-3" style="position: -webkit-sticky">                
+                    <nav id="sideNavScrollSpy" class="navbar navbar-light bg-light">                        
+                        <ul class="nav nav-pills">
+                          <li class="nav-item">
                             <a class="nav-link" href="#item-1">Item 1</a>
+                          </li>
+                          <li class="nav-item">
                             <a class="nav-link" href="#item-2">Item 2</a>
+                          </li>
+                          <li class="nav-item">
                             <a class="nav-link" href="#item-3">Item 3</a>
-                            <!-- <nav class="nav nav-pills flex-column">
-                                <a class="nav-link ms-3 my-1" href="#item-1-1">Item 1-1</a>
-                                <a class="nav-link ms-3 my-1" href="#item-1-2">Item 1-2</a>
-                            </nav>
-                            <a class="nav-link" href="#item-2">Item 2</a>
-                            <a class="nav-link" href="#item-3">Item 3</a>
-                            <nav class="nav nav-pills flex-column">
-                                <a class="nav-link ms-3 my-1" href="#item-3-1">Item 3-1</a>
-                                <a class="nav-link ms-3 my-1" href="#item-3-2">Item 3-2</a>
-                            </nav> -->
-                        </nav>
-                    </nav>
+                          </li>                          
+                        </ul>
+                      </nav>
+
                 </div>
                 <div class="row">
                     
@@ -91,8 +88,26 @@
                     <p>...</p>                    
                     <h4 id="item-2">Item 2</h4>
                     <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
                     <h4 id="item-3">Item 3</h4>
-                    <p>...</p>                    
+                    <p>...</p>              
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>
+                    <p>...</p>      
                 </div>
                 test 8</div>
                 </div>
