--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div id="wrapScrollSpy" class="position-relative">                
                 <div class="sticky-top offset-9 col-3" style="position: -webkit-sticky">                
                     <nav id="sideNavScrollSpy" class="navbar navbar-light">                        
-                        <ul class="nav nav-pills flex-column">
+                        <ul id="ulScrollSpy" class="nav nav-pills flex-column">
                           <li class="nav-item">
                             <a class="nav-link" href="#item-1">Method 1</a>
                           </li>
@@ -87,7 +87,7 @@
 
                 
                 
-                <div data-bs-spy="scroll" data-bs-target="#sideNavScrollSpy" data-bs-offset="0" tabindex="0" style="margin-top: -260px;">
+                <div data-bs-spy="scroll" data-bs-target="#ulScrollSpy" data-bs-offset="0" tabindex="0" style="margin-top: -260px;">
                     <div id="item-1" class="cardContainer px-4 pt-3 pb-1 mb-4">                        
                         <h4>Method 1</h4>
                         <p>
